# ai-temp-monitor

./: .gitignore  README.md  app.py  env_example  graph.py  llm_messages.json  main.py  main2.py  pyproject.toml  test.py  test2.py  test3.py  test4.py  to_do.txt  warnings_log.json  weather_tool_test_2.py
graph/: data.csv  data_gen.py  graph.py
src/: data_loader.py  data_preprocessing.py  device_stream.py  file_io.py  gemini.py  graph_async.py  my_warnings.py
src/agent/: base_agent.py  logger.py  orchestrator.py
src/agent/config/: agent.yaml  orchestrator.yaml  week_avg_temp_tool.yaml  writing_tool.yaml
src/agent/llm/: llm_ops.py
src/agent/tools/: __init__.py  base_tool.py  history_weather_tool.py  message_tool.py  weather_tool.py  week_avg_temp_tool.py  writing_tool.py
src/data/: iot_telemetry_data_url.txt
src/multiagents/: orchestrator.py  orchestrator_example.py
src/multiagents/agents/: base_agent.py
src/multiagents/llm/: llm_ops.py
src/multiagents/tools/: base_tool.py  weather_tool.py
src/singleagent/tools/: weather_tool.py
test/: base_agent_test.py  data_preprocessing_test.py  device_output_test.py  history_weather_tool_test.py  llm_ops_test.py  mockwarnings_log.json  orchestrator_test.py  test.py  weather_tool_test.py  week_avg_tool_test.py  writing_tool_test.py
